# app

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  ini.sql  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflow/: ci.yml
hotel/: Dockerfile  docker-compose.yml  ini.sql  pyproject.toml  pytest.ini  requirements.txt
hotel/brone_hotel/: apps.py  models.py  urls.py  views.py
hotel/brone_hotel/migrations/: 0001_initial.py
hotel/brone_hotel/tests/: conftest.py  test_bookings_api.py  test_rooms_api.py
hotel/hotel/: settings.py  urls.py
src/hotel/: settings.py  settings_test.py  urls.py
src/hotel/apps/brone_hotel/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
src/hotel/apps/brone_hotel/migrations/: 0001_initial.py
src/hotel/apps/brone_hotel/services/: booking_service.py  room_service.py
src/hotel/apps/brone_hotel/tests/: conftest.py  test_bookings_api.py  test_rooms_api.py
src/hotel/apps/brone_hotel/views/: __init__.py  booking.py  room.py
tests/: conftest.py  test_booking_api.py  test_rooms_api.py
